# test-app-std

./: README.md  test-app.drawio
.github/workflows/: main.yml
ansible/: ansible.cfg  inventory.yml  playbook.yml
ansible/group_vars/: all.yml
ansible/roles/fastapi/handlers/: main.yml
ansible/roles/fastapi/tasks/: main.yml
ansible/roles/fastapi/templates/: env.j2  fastapi.service.j2
ansible/roles/postgres/handlers/: main.yml
ansible/roles/postgres/tasks/: main.yml
ansible/roles/postgres/templates/: pg_hba.conf.j2  postgresql.conf.j2
ansible/tests/: test_installation.yml
my_fastapi_app/: .env  MANIFEST.in  pyproject.toml  requirements.txt
my_fastapi_app/app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
my_fastapi_app/packaging/: fastapi-app.spec  fastapi.service
my_fastapi_app/tests/: __init__.py  conftest.py  test_crud.py  test_main.py
terraform/: 0-locals.tf  10-outputs.tf  4-subnets.tf  5-nat.tf  6-routes.tf  7-security-groups.tf  8-instances.tf  9-key-pairs.tf
